--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -33,6 +33,61 @@ header h1 {
   line-height: 60px;
 }
 
+header .type {
+  display: inline-block;
+  margin: 0 auto
+}
+
+header .type:after {
+  display: block;
+  content: "";
+  clear: both
+}
+
+header .type li {
+  float: left;
+  height: 30px;
+  line-height: 30px;
+  width: 80px;
+  border-top: solid 1px #fff;
+  border-right: solid 1px #fff;
+  border-bottom: solid 1px #fff;
+  cursor: pointer
+}
+
+
+@media screen and (max-height:450px) {
+	header .type li {
+		height: 20px;
+		line-height: 20px;
+		width: 50px
+	}
+}
+
+@media screen and (max-width:500px) {
+	header .type li {
+		height: 20px;
+		line-height: 20px;
+		width: 50px
+	}
+}
+
+header .type li:first-child {
+	border-left: solid 1px #fff;
+	border-top-left-radius: 5px;
+	border-bottom-left-radius: 5px
+}
+
+header .type li:last-child {
+	border-top-right-radius: 5px;
+	border-bottom-right-radius: 5px
+}
+
+header .type li.selected {
+	background: #fff;
+	color: #000
+}
+
 .left {
   left: 10px;
   top: 170px;
