--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,6 +13,10 @@
     <h1>
       <%= title %>
     </h1>
+    <ul class="type" id="type">
+      <li data-type="dot">Dot</li>
+      <li data-type="column" class="selected">Column</li>
+    </ul>
     <p>
       Volume <input id="volume" type="range" min="0" max="100" value="60">
     </p>
@@ -26,7 +30,8 @@
       <%})%>
     </ul>
   </div>
-  <div class="right"></div>
+  <div class="right" id="box"></div>
 </body>
 <script src="/javascripts/index.js"></script>
+
 </html>
