核心功能封装为 MusicVisualizer 对象🎵

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -32,6 +32,7 @@
   </div>
   <div class="right" id="box"></div>
 </body>
+<script src="/javascripts/MusicVisualizer.js"></script>
 <script src="/javascripts/index.js"></script>
 
 </html>
